--- a/SurfsUp/climate_starter.ipynb
+++ b/SurfsUp/climate_starter.ipynb
@@ -120,11 +120,7 @@
    ],
    "source": [
     "# Create our session (link) from Python to the DB\n",
-    "session = Session(engine)\n",
-    "first_row_measurement = session.query(measurement).first()\n",
-    "first_row_measurement.__dict__\n",
-    "# first_row = session.query(station).first()\n",
-    "# first_row.__dict__"
+    "session = Session(engine)"
    ]
   },
   {
